[tool.poetry]
name = "rag2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = ">=1.28.0"
langchain = ">=0.1.0"
langchain-ollama = ">=0.1.0"
langchain-community = ">=0.0.20"
langchain-core = ">=0.1.0"
langchain-huggingface = ">=0.0.10"
sentence-transformers = ">=2.2.0"
pymupdf = ">=1.23.0"
torch = ">=2.0.0"
transformers = ">=4.35.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
langchain-chroma = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
